refactor(project): enhance controller and service logic with structured responses and validations